# LinuxAppDevelopment25

./: .gitignore
01_TerminalProject/: Show.c
02_Multifile/: Makefile  fun.c  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  expected-1.txt  expected-2.txt  range.c  scenario-1.gdb  scenario-2.gdb
05_Regexps/: Makefile  esub.c  esubc
06_Tracing/: Makefile  move.c  protect.c
07_Environmental/: CMakeLists.txt  rhasher.c
08_I18n/: Makefile.am  configure.ac
08_I18n/po/: Makevars  ru.po
08_I18n/src/: Makefile.am  guesser.c
09_PatchDiff/: 0.patch  1.patch  2.patch  Makefile  labyrinth.c
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am  growbuf.h  libgrowbuf.c
10_LibTesting/tests/: Makefile.am  upstream.ts
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac
11_Documenting/po/: ru.po
11_Documenting/src/: Makefile.am  guesser.c
12_InstallPackaging/: Doxyfile.in  README.md
12_InstallPackaging/po/: Makefile.am
12_InstallPackaging/src/: worddict.c
12_InstallPackaging/tests/: Makefile.am
12_InstallPackaging_1/: Makefile.am  configure.ac
12_InstallPackaging_1/po/: ru.po
12_InstallPackaging_1/src/: Makefile.am  hangman.c  worddict.h
12_InstallPackaging_1/tests/: worddict.ts
